--- a/backend/.env
+++ b/backend/.env
@@ -3,3 +3,7 @@ IMAGE_UPLOAD_PATH= ../frontend/public/assets/image
 movie_UPLOAD_PATH= ../frontend/public/assets/movie
 series_UPLOAD_PATH= ../frontend/public/assets/series
 trailer_UPLOAD_PATH= ../frontend/public/assets/trailer
+PORT=5000
+
+
+
